--- a/eleApp/src/common/stylus/main.css
+++ b/eleApp/src/common/stylus/main.css
@@ -1,12 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,
- 300,
-300italic,
-400italic,
-700,
-700italic|PT+Serif:400,
-400italic,
-700,
-700italic);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,700,、700italic|PT+Serif:400,400italic,700,700italic);
 
 /*--- Clearings ---*/
 
